New
    const mainContent = document.getElementById('mainDashboard');
    ^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
